[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantry"
version = "1.0.0"
description = "The ultra-lightweight Docker alternative for Python developers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "erabytse", email = "support@docudeeper.com"}
]
keywords = ["container", "deployment", "venv", "lightweight", "docker-alternative"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
pyg = "pygantry.cli:app"
pygantry = "pygantry.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygantry*"]
