[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantry"
version = "1.2.0"
description = "Lightweight Python environment wrapper (Docker alternative using venv)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "FBF / erabytse", email = "support@docudeeper.com"}]
dependencies = ["typer", "pyyaml", "cowsay"]

[project.scripts]
pygantry = "pygantry.cli:app"
pyg = "pygantry.cli:app"